feat: add bazel test
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 requirements/*-requirements.lock.txt linguist-generated=true
 requirements.bzl linguist-generated=true
+nix/sources.nix linguist-generated=true
