--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,8 @@ skip_glob = ["test/*", "venv/*", "lib/*", "bazel-*"]
 
 [tool.pyright]
 pythonVersion = "3.10"
-exclude = ["bazel-*", "tools/gen_python_packages"]
+exclude = ["tools/gen_python_packages", "bazel-*/", "venv"]
+venv = ["venv"]
 typeCheckingMode = "strict"
 analysis.useLibraryCodeForTypes = true
 enableTypeIgnoreComments = true
