--- a/requirements/dev-requirements.in
+++ b/requirements/dev-requirements.in
@@ -1,6 +1,9 @@
 -r base-requirements.in
+# build package
 hatch
 jeepney # depdendant of keyring -> hatch
+SecretStorage # depdendant of keyring -> hatch
+# tools
 black==22.3.0
 codecov
 coverage
