--- a/monitoring/bentoml-monitoring-arize/tests/BUILD
+++ b/monitoring/bentoml-monitoring-arize/tests/BUILD
@@ -5,5 +5,8 @@ package(default_visibility = ["//visibility:public"])
 
 pytest_suite(
     name = "package",
-    args = ["--cov=bentoml.monitoring.arize", "--cov-report=term-missing"],
+    args = [
+        "--cov=bentoml.monitoring.arize",
+        "--cov-report=term-missing",
+    ],
 )
