--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -1,6 +1,9 @@
 package(default_visibility = ["//:__subpackages__"])
 
-exports_files(["python_rules.bzl"])
+exports_files([
+    "python_rules.bzl",
+    "run_script.bzl",
+])
 
 filegroup(
     name = "_pytest_wrapper",
