--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,9 +2,10 @@ package(default_visibility = ["//visibility:public"])
 
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
-load("@bazel_skylib//rules:write_file.bzl", "write_file")
 load("@rules_python//python:pip.bzl", "compile_pip_requirements")
 load("@rules_python//python:defs.bzl", "py_library")
+load("//bazel:run_script.bzl", "run_script")
+load("//:requirements.bzl", "requirement")
 
 # export default pyproject.toml config
 filegroup(
@@ -20,21 +21,19 @@ buildifier(
 # This rule adds a convenient way to update the requirements.txt
 # lockfile based on the requirements.in.
 # Note that this rules will be used to distribute package with bazel.
-compile_pip_requirements(
-    name = "base_requirements",
-    extra_args = ["--allow-unsafe"],  # We need to allow unsafe to lock pip version
-    requirements_in = "//requirements:base-requirements.in",
-    requirements_txt = "//requirements:base-requirements.lock.txt",
-    visibility = ["//visibility:__pkg__"],
-)
-
-compile_pip_requirements(
-    name = "dev_requirements",
-    extra_args = ["--allow-unsafe"],  # We need to allow unsafe to lock pip version
-    requirements_in = "//requirements:dev-requirements.in",
-    requirements_txt = "//requirements:dev-requirements.lock.txt",
-    visibility = ["//visibility:__pkg__"],
-)
+[
+    compile_pip_requirements(
+        name = "{}_requirements".format(name),
+        extra_args = ["--allow-unsafe"],  # We need to allow unsafe to lock pip version
+        requirements_in = "//requirements:{}-requirements.in".format(name),
+        requirements_txt = "//requirements:{}-requirements.lock.txt".format(name),
+        visibility = ["//visibility:__pkg__"],
+    )
+    for name in [
+        "base",
+        "dev",
+    ]
+]
 
 # The requirements.bzl file is generated with a reference to the interpreter for the host platform.
 # In order to check in a platform-agnostic file, we have to replace that reference with the symbol
@@ -51,28 +50,53 @@ genrule(
         """sed 's#"@python310_.*//:bin/python3"#interpreter#' >$@""",
     ]),
 )
-
-write_file(
-    name = "gen_update",
-    out = "update.sh",
-    content = [
-        "#!/usr/bin/env bash",
-        # Bazel gives us a way to access the source folder!
-        "cd $BUILD_WORKSPACE_DIRECTORY",
-        "cp -fv bazel-bin/requirements.bzl requirements.bzl",
-    ],
-)
-
-sh_binary(
-    name = "vendor_requirements",
-    srcs = ["update.sh"],
-    data = [":platform_agnostic"],
-)
-
 # Similarly ensures that the requirements.bzl file is updated based on the requirements.txt lockfile.
 diff_test(
-    name = "test-vendor",
+    name = "test_vendor",
     failure_message = "Please run: bazel run //:vendor_requirements",
     file1 = "//:requirements.bzl",
     file2 = ":platform_agnostic",
+)
+
+run_script(
+    name = "vendor_requirements",
+    content = [
+        "cp -fv bazel-bin/requirements.bzl requirements.bzl",
+    ],
+    data = [":platform_agnostic"],
+)
+
+run_script(
+    name = "format",
+    content = [
+        # Running isort and black
+        "black .",
+        "black --pyi typings/",
+        "isort .",
+        # Running nixfmt
+        "find . -name '*.nix' -exec nixfmt {} \\;",
+    ],
+    data = [
+        requirement("black"),
+        requirement("isort"),
+        ":pyproject",
+        "@nixfmt//:bin/nixfmt",
+    ],
+)
+
+run_script(
+    name = "check",
+    content = [
+        # Running isort and black
+        "black --check .",
+        "isort --check .",
+        # Running nixfmt
+        "nixfmt --check **/*.nix",
+    ],
+    data = [
+        requirement("black"),
+        requirement("isort"),
+        ":pyproject",
+        "@nixfmt//:bin/nixfmt",
+    ],
 )
