--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -1,9 +1,5 @@
 test --test_output=errors
-# test --test_env=PYTEST_PLUGINS=bentoml.testing.pytest.plugin
-
-# Windows requires these for multi-python support:
-build --enable_runfiles
-startup --windows_enable_symlinks
+test --test_env=PYTEST_PLUGINS=bentoml.testing.pytest.plugin
 
 # Dynamic link cause issues like: `dyld: malformed mach-o: load commands size (59272) > 32768`
 # https://github.com/bazelbuild/bazel/issues/9190
