--- a/monitoring/bentoml-monitoring-arize/pyproject.toml
+++ b/monitoring/bentoml-monitoring-arize/pyproject.toml
@@ -29,10 +29,7 @@ classifiers = [
 dynamic = ["version"]
 
 # NOTE: Make sure to add corresponding dependencies for given components here.
-dependencies = [
-    "bentoml==1.0.7",
-    "bentoml-monitoring==1.0.7",
-]
+dependencies = ["bentoml==1.0.7"]
 
 # NOTE: If requires additional dependencies for specific components, add them here.
 [project.optional-dependencies]
