chore: update vendor
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/requirements/base-requirements.in
+++ b/requirements/base-requirements.in
@@ -1,4 +1,3 @@
-bentoml[io-image,io-pandas]
+bentoml[all]
 # remove these once we release a new version of bentoml
-opentelemetry-sdk==1.12.0
 cookiecutter
