--- a/requirements/base-requirements.in
+++ b/requirements/base-requirements.in
@@ -1,3 +1,16 @@
-bentoml[all]
+bentoml[all]>=1.0.8
 # remove these once we release a new version of bentoml
-cookiecutter
+cookiecutter==2.1.1
+arize==5.2.0
+pydantic==1.10.2
+Pillow==9.3.0
+fs-s3fs==1.1.1
+opentelemetry-instrumentation-grpc==0.34b0
+grpcio==1.48.1
+grpcio-reflection==1.48.1
+grpcio-health-checking==1.48.1
+grpcio-channelz==1.48.1
+protobuf==3.19.6
+opentelemetry-exporter-jaeger==1.13.0
+opentelemetry-exporter-otlp==1.13.0
+opentelemetry-exporter-zipkin==1.13.0
