chore: move arize to development package
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/requirements/dev-requirements.in
+++ b/requirements/dev-requirements.in
@@ -5,6 +5,7 @@ jeepney # depdendant of keyring -> hatch
 SecretStorage # depdendant of keyring -> hatch
 # tools
 black==22.3.0
+arize==5.2.0
 codecov
 coverage
 isort
