--- a/monitoring/bentoml-plugins-arize/pyproject.toml
+++ b/monitoring/bentoml-plugins-arize/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "bentoml-monitoring-arize"
-description = "BentoML Monitoring Arize handler"
+name = "bentoml-plugins-arize"
+description = "BentoML Monitoring Arize Plugin"
 readme = { file = "README.md", content-type = "text/markdown" }
 license = { text = "Apache-2.0" }
 requires-python = ">=3.7"
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries",
 ]
@@ -33,17 +34,17 @@ dependencies = ["bentoml>=1.0.8", "arize"]
 
 # NOTE: If requires additional dependencies for specific components, add them here.
 [project.optional-dependencies]
-test = ["pytest"]
+test = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-xdist"]
 
 [project.urls]
-Homepage = "https://github.com/bentoml/ecosystem/tree/main/monitoring/bentoml-monitoring-arize"
+Homepage = "https://github.com/bentoml/bentoml_plugins/tree/main/monitoring/bentoml-plugins-arize"
 
 [tool.hatch.version]
-path = "src/bentoml_monitoring_arize/version.py"
+path = "src/bentoml_plugins/arize/version.py"
 
 [tool.hatch.build.targets.sdist]
 include = ["/src", "/tests"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/bentoml_monitoring_arize"]
-exclude = ["src/bentoml_monitoring_arize/BUILD"]
+packages = ["src/bentoml_plugins"]
+exclude = ["src/bentoml_plugins/arize/BUILD"]
