--- a/tools/gen_python_packages/{{cookiecutter.__project}}/src/bentoml_plugins/{{cookiecutter.__provider}}/BUILD
+++ b/tools/gen_python_packages/{{cookiecutter.__project}}/src/bentoml_plugins/{{cookiecutter.__provider}}/BUILD
@@ -4,11 +4,7 @@ load("@rules_python//python:defs.bzl", "py_library")
 load("//:requirements.bzl", "requirement")
 
 py_library(
-    {%- if cookiecutter.provider != "" %}
-    name = "{{ cookiecutter.provider }}",
-    {%- else %}
-    name = "{{ cookiecutter.features }}",
-    {%- endif %}
+    name = "{{ cookiecutter.__provider }}",
     srcs = ["__init__.py"],
     deps = [
         requirement("bentoml"),
