feat: add tests and format check for BUILD
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -29,6 +29,8 @@ runs:
       name: Setup Nix
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+    - name: Install nixfmt
+      run: nix-env -iA nixpkgs.nixfmt
     - name: Get pip cache dir
       id: pip-cache
       shell: bash
