--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -3,6 +3,7 @@ package(default_visibility = ["//:__subpackages__"])
 exports_files([
     "python_rules.bzl",
     "run_shell.bzl",
+    "deps.bzl",
 ])
 
 filegroup(
