fix: setup action
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -30,6 +30,7 @@ runs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
     - name: Install nixfmt
+      shell: bash
       run: nix-env -iA nixpkgs.nixfmt
     - name: Get pip cache dir
       id: pip-cache
