--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -29,9 +29,11 @@ runs:
       name: Setup Nix
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+        extra_nix_config: |
+          access-tokens = github.com=$GITHUB_TOKEN
     - name: Install nixfmt
       shell: bash
-      run: nix-env -iA nixpkgs.nixfmt
+      run: nix-env -i nixfmt
     - name: Get pip cache dir
       id: pip-cache
       shell: bash
