--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.7", "3.10"]
+        # TODO: 3.7
+        python-version: ["3.8", "3.10"]
         packages: ["bentoml-plugins-arize"]
     name: python${{ matrix.python-version }} tests for ${{ matrix.packages }} (${{ matrix.os }})
     steps:
@@ -73,4 +74,6 @@ jobs:
           pushd monitoring/${{ matrix.packages }} >/dev/null
           pip install ".[test]"
       - name: Run tests
-        run: pytest tests
+        run: |
+          pushd monitoring/${{ matrix.packages }} >/dev/null
+          pytest tests
