--- a/requirements/dev-requirements.in
+++ b/requirements/dev-requirements.in
@@ -3,6 +3,7 @@
 hatch
 jeepney # depdendant of keyring -> hatch
 SecretStorage # depdendant of keyring -> hatch
+importlib-metadata>=3.6 # depdendant of keyring -> hatch
 # tools
 black==22.3.0
 arize==5.2.0
