chore: ensure to ignore attributes for generated stubs
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 requirements/*-requirements.lock.txt linguist-generated=true
 requirements.bzl linguist-generated=true
 nix/sources.nix linguist-generated=true
-typings/*.pyi linguist-generated=true
+typings/**/*.pyi linguist-generated=true
