--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Setup CI
         uses: ./.github/actions/setup-repo
       - name: (pylint) Running lint on monitoring
-        run: pylint monitoring
+        run: pylint monitoring --fail-under 9.5
 
   type:
     runs-on: ubuntu-latest
