--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,8 +62,15 @@ skip_glob = ["test/*", "venv/*", "lib/*", "bazel-*"]
 
 [tool.pyright]
 pythonVersion = "3.10"
-exclude = ["tools/gen_python_packages", "bazel-*/", "venv"]
+exclude = [
+  "tools/gen_python_packages",
+  "bazel-*/",
+  "venv",
+  "**/tests",
+  "typings",
+]
 venv = ["venv"]
 typeCheckingMode = "strict"
 analysis.useLibraryCodeForTypes = true
 enableTypeIgnoreComments = true
+reportMissingTypeStubs = "warning"
