--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -33,7 +33,7 @@ defaults:
     shell: bash --noprofile --norc -exo pipefail {0}
 
 jobs:
-  format-check:
+  lint:
     runs-on: ubuntu-latest
     if: "!github.event.repository.fork" # Don't run on fork repository
     timeout-minutes: 20
@@ -47,21 +47,7 @@ jobs:
       - name: Run format check
         run: |
           bazel run //:check
-          bazel run //:buildifier_check
-
-  lint:
-    runs-on: ubuntu-latest
-    if: "!github.event.repository.fork" # Don't run on fork repository
-    timeout-minutes: 20
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # fetch all tags and branches
-      - name: Setup CI
-        uses: ./.github/actions/setup-repo
-      - name: (pylint) Running lint on monitoring
-        run: pylint monitoring --fail-under 9.5
+          bazel run //:buildifier_test
 
   type:
     runs-on: ubuntu-latest
