--- a/monitoring/bentoml-plugins-arize/tests/BUILD
+++ b/monitoring/bentoml-plugins-arize/tests/BUILD
@@ -11,5 +11,6 @@ pytest_suite(
     ],
     deps = [
         requirement("arize"),
+        "//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize",
     ],
 )
