--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,32 +3,26 @@ addopts = ["-rfEX", "--cov-report=", "--cov-append"]
 python_files = ["test_*.py", "*_test.py"]
 testpaths = ["tests"]
 
-[tool.pylint.main]
-recursive = true
-extension-pkg-allow-list = ["pydantic.schema", "arize"]
-enable = ["c-extension-no-member"]
-disable = [
-  "coerce-builtin",
-  "no-absolute-import",
-  "import-error",
-  "no-name-in-module",
-  "no-member",
-  "C",
-  "R",
+[tool.flake8]
+max_line_length = 120
+max_complexity = 14
+inline_quotes = "double"
+multiline_quotes = "double"
+ignore = ["E203", "W503"]
+exclude = "tools/gen_python_packages,bazel-*/,venv,**/tests,typings"
+
+
+[tool.ruff]
+line-length = 120
+extend-select = ['Q']
+flake8-quotes = { inline-quotes = 'double', multiline-quotes = 'double' }
+exclude = [
+  "tools/gen_python_packages",
+  "bazel-*/",
+  "venv",
+  "**/tests",
+  "typings",
 ]
-evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
-msg-template = "{msg_id}:{symbol} [{line:0>3d}:{column:0>2d}] {obj}: {msg}"
-output-format = "colorized"
-score = true
-
-[tool.pylint.classes]
-valid-metaclass-classmethod-first-arg = ["cls", "mcls", "kls"]
-
-[tool.pylint.logging]
-logging-format-style = "old" # using %s formatter for logging (performance-related)
-
-[tool.pylint.miscellaneous]
-notes = ["FIXME", "XXX", "TODO", "NOTE", "WARNING"]
 
 [tool.black]
 line-length = 88
@@ -61,7 +55,7 @@ force_alphabetical_sort_within_sections = true
 skip_glob = ["test/*", "venv/*", "lib/*", "bazel-*"]
 
 [tool.pyright]
-pythonVersion = "3.10"
+pythonVersion = "3.11"
 exclude = [
   "tools/gen_python_packages",
   "bazel-*/",
