chore: migrate infra to bentoml bazel
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/monitoring/bentoml-plugins-arize/tests/BUILD
+++ b/monitoring/bentoml-plugins-arize/tests/BUILD
@@ -1,16 +1,11 @@
-load("//:requirements.bzl", "requirement")
-load("//bazel:python_rules.bzl", "pytest_suite")
+load("@plugins//:requirements.bzl", "requirement")
+load("@com_github_bentoml_bentoml//rules/py:python.bzl", "py_test")
 
 package(default_visibility = ["//visibility:public"])
 
-pytest_suite(
+py_test(
     name = "package",
-    args = [
-        "--cov=bentoml_plugins.arize",
-        "--cov-report=term-missing",
-    ],
-    deps = [
-        requirement("arize"),
-        "//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize",
-    ],
+    data = ["//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize:srcs_files"],
+    deps = ["//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize"],
+    starlark_requirement = requirement,
 )
