--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,22 +32,6 @@ defaults:
     shell: bash --noprofile --norc -exo pipefail {0}
 
 jobs:
-  vendor:
-    name: Vendored requirements test
-    runs-on: ubuntu-latest
-    if: "!github.event.repository.fork" # Don't run on fork repository
-    timeout-minutes: 20
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # fetch all tags and branches
-      - name: Setup CI
-        uses: ./.github/actions/setup-repo
-      - name: Run format check
-        run: |
-          bazel test //:test_vendor
-
   monitoring-tests:
     runs-on: ubuntu-latest
     if: "!github.event.repository.fork" # Don't run on fork repository
@@ -56,8 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        # TODO: 3.7
-        python-version: ["3.8", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         packages: ["bentoml-plugins-arize"]
     name: python${{ matrix.python-version }} tests for ${{ matrix.packages }} (${{ matrix.os }})
     steps:
@@ -69,11 +52,5 @@ jobs:
         uses: ./.github/actions/setup-repo
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install ${{ matrix.packages }}
-        run: |
-          pushd monitoring/${{ matrix.packages }} >/dev/null
-          pip install ".[test]"
-      - name: Run tests
-        run: |
-          pushd monitoring/${{ matrix.packages }} >/dev/null
-          pytest tests
+      - name: Run python${{ matrix.python-version }} tests
+        run: bazel test //monitoring/bentoml-plugins-arize/tests/...
