--- a/monitoring/bentoml-plugins-arize/pyproject.toml
+++ b/monitoring/bentoml-plugins-arize/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.7"
 keywords = ["MLOps", "AI", "BentoML", "Model Serving", "Model Deployment"]
 authors = [{ name = "BentoML Team", email = "contact@bentoml.com" }]
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Education",
     "Intended Audience :: Science/Research",
@@ -30,7 +30,7 @@ classifiers = [
 dynamic = ["version"]
 
 # NOTE: Make sure to add corresponding dependencies for given components here.
-dependencies = ["bentoml", "arize>=5.2.0"]
+dependencies = ["bentoml>=1.0.10", "arize>=5.2.0"]
 
 # NOTE: If requires additional dependencies for specific components, add them here.
 [project.optional-dependencies]
