--- a/monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize/BUILD
+++ b/monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize/BUILD
@@ -1,14 +1,20 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@rules_python//python:defs.bzl", "py_library")
-load("//:requirements.bzl", "requirement")
+load("@plugins//:requirements.bzl", "requirement")
 
 py_library(
     name = "arize",
     srcs = ["__init__.py"],
+    imports = ["../.."],
     deps = [
         requirement("bentoml"),
         requirement("arize"),
         requirement("attrs"),
     ],
+)
+
+filegroup(
+    name = "srcs_files",
+    srcs = glob(["*.py"]) + ["py.typed"],
 )
