--- a/tools/BUILD
+++ b/tools/BUILD
@@ -1,5 +1,5 @@
 load("@rules_python//python:defs.bzl", "py_binary")
-load("//:requirements.bzl", "requirement")
+load("@plugins//:requirements.bzl", "requirement")
 
 py_binary(
     name = "bootstrap",
