--- a/tools/gen_python_packages/{{cookiecutter.__project}}/tests/BUILD
+++ b/tools/gen_python_packages/{{cookiecutter.__project}}/tests/BUILD
@@ -1,9 +1,6 @@
-load("@plugins//:requirements.bzl", "requirement")
+load("@pypi//:requirements.bzl", "requirement")
 load("@com_github_bentoml_bentoml//rules/py:python.bzl", "py_test")
 
 package(default_visibility = ["//visibility:public"])
 
-py_test(
-    name = "package",
-    starlark_requirement = requirement,
-)
+py_test( name = "package")
