--- a/monitoring/bentoml-plugins-arize/tests/BUILD
+++ b/monitoring/bentoml-plugins-arize/tests/BUILD
@@ -5,9 +5,5 @@ package(default_visibility = ["//visibility:public"])
 
 py_test(
     name = "package",
-    data = ["//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize:srcs_files"],
-    deps = [
-        "//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize",
-        requirement("arize"),
-    ],
+    deps = ["//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize"],
 )
